# crop_classification

./: jan_train.ipynb  jan_workbook.ipynb  main.py  pyproject.toml
notes/: learner_guide_v2.md
